--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -1,49 +1,51 @@
 <!-- app/views/leaderboard/users.html.erb -->
 <h1 class="text-xl text-gray-300 p-4">User Leaderboard</h1>
 
-<div class="flex justify-around p-4 bg-gray-800">
-  <%= link_to 'Last 7 Days', leaderboard_users_path(period: '7_days'), class: 'text-gray-300 px-4 py-2 hover:bg-gray-700' %>
-  <%= link_to 'Last 28 Days', leaderboard_users_path(period: '28_days'), class: 'text-gray-300 px-4 py-2 hover:bg-gray-700' %>
-  <%= link_to 'Last 3 Months', leaderboard_users_path(period: '3_months'), class: 'text-gray-300 px-4 py-2 hover:bg-gray-700' %>
-  <%= link_to 'Last 1 Year', leaderboard_users_path(period: '1_year'), class: 'text-gray-300 px-4 py-2 hover:bg-gray-700' %>
-  <%= link_to 'Total', leaderboard_users_path(period: 'total'), class: 'text-gray-300 px-4 py-2 hover:bg-gray-700' %>
-</div>
+<ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400">
+  <li class="mr-2">
+    <%= link_to 'Last 7 Days', leaderboard_users_path(period: '7_days'), class: "inline-block p-4 #{params[:period] == '7_days' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
+  </li>
+  <li class="mr-2">
+    <%= link_to 'Last 28 Days', leaderboard_users_path(period: '28_days'), class: "inline-block p-4 #{params[:period] == '28_days' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
+  </li>
+  <li class="mr-2">
+    <%= link_to 'Last 3 Months', leaderboard_users_path(period: '3_months'), class: "inline-block p-4 #{params[:period] == '3_months' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
+  </li>
+  <li class="mr-2">
+    <%= link_to 'Last 1 Year', leaderboard_users_path(period: '1_year'), class: "inline-block p-4 #{params[:period] == '1_year' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
+  </li>
+  <li class="mr-2">
+    <%= link_to 'Total', leaderboard_users_path(period: 'total'), class: "inline-block p-4 #{params[:period] == 'total' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
+  </li>
+</ul>
 
-<div class="flex flex-col space-y-4 p-4">
-  <div class="overflow-x-auto">
-    <table class="min-w-full bg-gray-800 text-gray-300 text-sm">
-      <thead class="bg-gray-700 text-gray-400">
-        <tr>
-          <th class="px-4 py-2 text-left">Handle</th>
-          <th class="px-4 py-2 text-left">Total Impressions</th>
-          <th class="px-4 py-2 text-left">Total Retweets</th>
-          <th class="px-4 py-2 text-left">Total Likes</th>
-          <th class="px-4 py-2 text-left">Total Quotes</th>
-          <th class="px-4 py-2 text-left">Total Replies</th>
-          <th class="px-4 py-2 text-left">Total Bookmarks</th>
-          <th class="px-4 py-2 text-left">Total Followers</th>
-          <% if params[:period] == 'total' %>
-            <th class="px-4 py-2 text-left">First Collected</th>
-          <% end %>
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-4">
+  <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">Handle</th>
+        <th scope="col" class="px-6 py-3">Total Impressions</th>
+        <th scope="col" class="px-6 py-3">Total Retweets</th>
+        <th scope="col" class="px-6 py-3">Total Likes</th>
+        <th scope="col" class="px-6 py-3">Total Quotes</th>
+        <th scope="col" class="px-6 py-3">Total Replies</th>
+        <th scope="col" class="px-6 py-3">Total Bookmarks</th>
+        <th scope="col" class="px-6 py-3">Total Followers</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+          <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= user.handle %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_impressions) %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_retweets) %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_likes) %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_quotes) %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_replies) %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_bookmarks) %></td>
+          <td class="px-6 py-4"><%= number_to_human_readable(user.total_followers) %></td>
         </tr>
-      </thead>
-      <tbody class="bg-gray-900">
-        <% @users.each do |user| %>
-          <tr class="border-b border-gray-700">
-            <td class="px-4 py-2"><%= user.handle %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_impressions) %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_retweets) %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_likes) %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_quotes) %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_replies) %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_bookmarks) %></td>
-            <td class="px-4 py-2"><%= number_to_human_readable(user.total_followers) %></td>
-            <% if params[:period] == 'total' %>
-              <td class="px-4 py-2"><%= user.first_collection_date.strftime('%Y-%m-%d') %></td>
-            <% end %>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
 </div>
