--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -34,7 +34,17 @@
     <tbody>
       <% @users.each_with_index do |user, index| %>
         <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-          <td class="px-2 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= index + 1 %></td>
+          <td class="px-2 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+            <% if index == 0 %>
+              <span class="text-yellow-500">🥇 <%= index + 1 %></span>
+            <% elsif index == 1 %>
+              <span class="text-gray-500">🥈 <%= index + 1 %></span>
+            <% elsif index == 2 %>
+              <span class="text-orange-500">🥉 <%= index + 1 %></span>
+            <% else %>
+              <%= index + 1 %>
+            <% end %>
+          </td>
           <td class="px-2 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= user.handle %></td>
           <td class="px-2 py-4"><%= number_to_human_readable(user.total_impressions) %></td>
           <td class="px-2 py-4"><%= number_to_human_readable(user.total_retweets) %></td>
