add today to leaderboard

--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -3,6 +3,9 @@
 
 <ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400">
   <li class="mr-2">
+    <%= link_to 'Today', leaderboard_users_path(period: 'today'), class: "inline-block p-4 #{params[:period] == 'today' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
+  </li>
+  <li class="mr-2">
     <%= link_to 'Last 7 Days', leaderboard_users_path(period: '7_days'), class: "inline-block p-4 #{params[:period] == '7_days' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
   </li>
   <li class="mr-2">
