Improve UI of dashboard

--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -24,7 +24,7 @@ Yep 1. is perfect
     <p class="paragraph-base">
       Subscribing allows us to collect your Twitter data each day in order to show your aggregated Twitter metrics.
     </p>
-    <%= render Shared::ButtonComponent.new(text: "Subscribe", url: subscription_path, classes: 'w-full', method: :get) %>
+    <%= render Shared::ButtonComponent.new(text: "Subscribe", url: subscription_path, method: :get) %>
   <% end %>
 <% end %>
 
