Add transactional message to text mailer

--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -1,1 +1,5 @@
 <%= yield %>
+
+This is a transactional email related to your account or subscription. You cannot unsubscribe from these emails.
+
+This email was sent to <%= @user.email %>. If you did not sign up for this subscription, please get in touch with us at x@echosight.io
