--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -22,7 +22,7 @@
   <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
     <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <th scope="col" class="px-2 py-3 text-center">#</th>
+        <th scope="col" class="px-2 py-3 text-center">Rank</th>
         <th scope="col" class="px-2 py-3">Handle</th>
         <th scope="col" class="px-2 py-3">Impressions</th>
         <th scope="col" class="px-2 py-3">Reposts</th>
