--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -75,13 +75,13 @@
       <h3 class="font-bold text-lg">Echosight</h3>
       <p>&copy; 2024 Echosight. All rights reserved.</p>
     </div>
-    <div class="flex space-x-4">
-      <a href="#about" class="hover:underline">About</a>
-      <a href="#contact" class="hover:underline">Contact</a>
-      <a href="#privacy" class="hover:underline">Privacy</a>
+    <div class="flex items-center">
+      <a href="#about" class="hover:underline px-4">About</a>
+      <a href="#contact" class="hover:underline px-4">Contact</a>
+      <a href="#privacy" class="hover:underline px-4">Privacy</a>
     </div>
-    <div class="flex space-x-4">
-      <a href="https://twitter.com/loftwah" class="hover:underline">Twitter/X</a>
+    <div class="flex items-center">
+      <a href="https://twitter.com/loftwah" class="hover:underline px-4">Twitter/X</a>
     </div>
   </div>
 </footer>
