--- a/app/components/shared/nav_bar_component.html.erb
+++ b/app/components/shared/nav_bar_component.html.erb
@@ -40,11 +40,14 @@
                     <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
                         <li><%= link_to 'Two-Factor Authentication', two_factor_authentication_path, class: link_classes %></li>
                         <li><a href="<%= edit_user_settings_path %>" class="<%= link_classes %>">Settings</a></li>
-                        <li><a href="<%= edit_email_subscription_path %>" class="<%= link_classes %>">Notifications</a></li>
-                        <li><a href="<%= edit_user_registration_path %>" class="<%= link_classes %>">Profile</a></li>
                         <li>
                           <%= link_to 'Subscription & Billing', subscription_path, class: link_classes %>
                         </li>
+                        <li>
+                          <%= link_to 'Feature Requests', feature_requests_path, class: link_classes %>
+                        </li>
+                        <li><a href="<%= edit_user_registration_path %>" class="<%= link_classes %>">Profile</a></li>
+                        <li><a href="<%= edit_email_subscription_path %>" class="<%= link_classes %>">Notifications</a></li>
                         <li>
                             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: link_classes %>
                         </li>
