improve landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center py-8 bg-gray-100 dark:bg-gray-900">
-  <h1 class="text-4xl font-bold text-gray-900 dark:text-gray-300 mb-4">Revolutionize Your Social Media Strategy with Echosight</h1>
+  <h1 class="text-3xl font-bold text-gray-900 dark:text-gray-300 mb-4">Revolutionize Your Social Media Strategy with Echosight</h1>
   <p class="text-xl text-gray-700 dark:text-gray-400 mb-8">Showcase your Twitter/X analytics with ease and compare yourself within the community.</p>
   <button class="bg-blue-600 text-white px-8 py-4 rounded">Sign Up Now</button>
 </div>
@@ -33,7 +33,7 @@
           <!-- Icon here -->
         </div>
         <h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-gray-300">Leaderboard</h3>
-        <p class="text-gray-700 dark:text-gray-400">See how you rank among top users, and soon, compare yourself directly with a select number of accounts you care about.</p>
+        <p class="text-gray-700 dark:text-gray-400">See how you rank among top users, and compare yourself directly with a select number of accounts you care about.</p>
       </div>
       <div class="text-center">
         <div class="bg-blue-900 text-white p-4 rounded-full mx-auto mb-4 w-16 h-16 flex items-center justify-center">
@@ -76,9 +76,9 @@
       <p>&copy; 2024 Echosight. All rights reserved.</p>
     </div>
     <div class="flex items-center">
-      <a href="#about" class="hover:underline px-4">About</a>
-      <a href="#contact" class="hover:underline px-4">Contact</a>
-      <a href="#privacy" class="hover:underline px-4">Privacy</a>
+      <a href="#about" class="hover:underline px-4">Sign Up</a>
+      <a href="#contact" class="hover:underline px-4">Leaderboard</a>
+      <a href="#privacy" class="hover:underline px-4">FAQ</a>
     </div>
     <div class="flex items-center">
       <a href="https://twitter.com/loftwah" class="hover:underline px-4">Twitter/X</a>
