--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -52,7 +52,7 @@
   var elements = stripe.elements();
 
 
-var card = elements.create('card', {
+  card = elements.create('card', {
   style: {
     base: {
       fontSize: '14px', // Tailwind's text-sm
