Move copyright to footer

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -80,6 +80,8 @@
         This email was sent to <%= @user.email %>.<br>
         If you did not sign up for this subscription, please get in touch with us at x@echosight.io
       </p>
+
+      <p>&copy; 2023-<%= Date.current.year %> Echosight. All rights reserved.</p>
     </div>
   </div>
 </body>
