Fix subject and salutation

--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hi <%= t("devise.mailer.invitation_instructions.hello", email: @resource.email) %>,<p>
+<p>Hi <%= @resource.email %>,<p>
 
 <p>We're excited to announce that Echosight is now ready to revolutionize your social media strategy, and we're thrilled to invite you from our waiting list for exclusive early access!</p>
 
