--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -11,7 +11,22 @@
 
   <div class="relative">
     <!-- Header Photo -->
-    <!-- this is poor refactor later -->
+    <% if hide_profile_banner? %>
+      <div class="flex items-end justify-between px-4 py-4">
+  <!-- Profile Photo and Info Container -->
+  <div class="flex items-center space-x-4">
+    <!-- Profile Photo -->
+    <%= render_twitter_image("min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
+
+    <!-- Profile Info -->
+    <div class="py-2 px-4 rounded-lg" data-test="user-profile">
+      <h1 class="text-xl font-bold text-gray-900 dark:text-white"><%= page_user_name %></h1>
+      <div class="text-xs dark:text-white lg:mb-3">@<%= page_user_handle %></div>
+      <div class="text-m dark:text-white"><%= page_user_twitter_bio %></div>
+    </div>
+  </div>
+</div>
+    <% else %>
     <% if page_user_banner_url.present? %>
       <div style="width: 100%">
         <img class="w-full h-full object-cover shadow-lg top-0 left-0" src="<%= page_user_banner_url %>" alt="Twitter/X Header Photo">
@@ -32,6 +47,7 @@
       <div class="text-xs dark:text-white lg:mb-3">@<%= page_user_handle %></div>
       <div class="text-m dark:text-white dark:text-white"><%= page_user_twitter_bio %></div>
     </div>
+    <% end %>
 
   </div>
 
