--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,14 @@
     <!-- Card -->
     <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
         <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
-            Sign Up
+            Join Waiting List
         </h2>
 
+        <p class="paragraph-base">We are currently in private beta. Join the waiting list and we will notify you when we are ready to launch.</p>
+
+        <p class="paragraph-base">While you wait, why dont you check out our <%= link_to "demo page", public_page_path(:demo), target: "_blank" %> to see what your public page will look like.</p>
+        <%
+=begin%>
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -30,6 +35,8 @@
             <%= f.submit "Sign up", class: "w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" %>
           </div>
         <% end %>
+<%
+=end%>
 
           <%= render('shared/registrations/omniauth_login') %>
           <%= render "devise/shared/links" %>
