--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -4,7 +4,11 @@
   <% end %>
 
   <% if devise_mapping.registerable? && !(controller_name == 'registrations' && action_name == 'new') %>
-   Not registered? <strong> <%= link_to "Create account", new_registration_path(resource_name) %></strong><br>
+    <%
+=begin%>
+ Not registered? <%= link_to "Create account", new_registration_path(resource_name) %><br>
+<%
+=end%>
   <% end %>
 
   <% if devise_mapping.confirmable? && !(controller_name == 'confirmations' && action_name == 'show') %>
