--- a/app/views/shared/registrations/_omniauth_login.html.erb
+++ b/app/views/shared/registrations/_omniauth_login.html.erb
@@ -14,7 +14,7 @@
 =end%>
 
 <%- if devise_mapping.invitable? %>
-<% #render Shared::ButtonComponent.new(text: "Join waiting list", url: 'https://echosight.io/#waitinglist', classes: 'w-full') %>
+<%= render Shared::ButtonComponent.new(text: "Join waiting list", url: 'https://echosight.io/#waitinglist', classes: 'w-full') %>
 <%- elsif devise_mapping.omniauthable? %>
 <%- text ='<svg class="w-6 h-6 inline-block mr-2 -mt-1" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
       <path d="M23.954 4.569c-.885.39-1.83.653-2.825.774 1.017-.609 1.798-1.574 2.165-2.723-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.556-3.594-1.556-2.72 0-4.92 2.2-4.92 4.92 0 .386.044.762.128 1.122-4.09-.205-7.719-2.166-10.141-5.144-.424.729-.666 1.574-.666 2.476 0 1.71.869 3.213 2.19 4.096-.806-.026-1.566-.248-2.228-.616v.062c0 2.386 1.698 4.374 3.946 4.828-.413.111-.848.171-1.296.171-.314 0-.62-.03-.917-.086.62 1.934 2.422 3.345 4.557 3.385-1.67 1.309-3.778 2.089-6.066 2.089-.394 0-.78-.023-1.158-.067 2.165 1.389 4.743 2.2 7.548 2.2 9.055 0 14.007-7.496 14.007-14.007 0-.213-.005-.425-.015-.636.962-.695 1.796-1.562 2.457-2.549z"></path>
