Fix dashboard page bug

--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -15,7 +15,7 @@ Yep 1. is perfect
 <% if show_steps_to_complete_message? %>
   <% if eligible_for_trial? %>
   <div class="p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-green-300" role="alert">
-    We are currently offering a <%= Subsciption.trial_period %> day free trial for our early adopters. Subscribe now and pay in <%= Subsciption.trial_period %> days.
+    We are currently offering a <%= Subscription.trial_period %> day free trial for our early adopters. Subscribe now and pay in <%= Subscription.trial_period %> days.
   </div>
   <% end %>
   <div class="p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300" role="alert">
